# cc-templates

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.basedpyright/: baseline.json
pytemplate/: cookiecutter.json
pytemplate/{{ cookiecutter.__project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pytemplate/{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __init__.py  __main__.py  app.py  argument_parser.py
templates/pytemplate/: cookiecutter.json  cookiecutter.yaml  local_extensions.py  test_defaults.json
templates/pytemplate/hooks/: post_gen_project.sh  pre_prompt.py
templates/pytemplate/{{ cookiecutter.__project_slug }}/: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
templates/pytemplate/{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __init__.py  info.py
templates/pytemplate/{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.package_name }}/: __main__.py  app.py
templates/rstemplate/: cookiecutter.json  test_defaults.json
templates/rstemplate/hooks/: post_gen_project.sh
templates/rstemplate/{{ cookiecutter.__project_slug }}/: .editorconfig  .gitignore  .pre-commit-config.yaml
tests/: test_templates.py
typings/cookiecutter/: _typeshed.pyi  cli.pyi  config.pyi  environment.pyi  exceptions.pyi  extensions.pyi  find.pyi  generate.pyi  hooks.pyi  log.pyi  main.pyi  prompt.pyi  replay.pyi  repository.pyi  utils.pyi  vcs.pyi  zipfile.pyi
