# dev tools
[tool.ruff]
line-length     = 90
indent-width    = 4
target-version  = "{{ cookiecutter.__ruff_target }}"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 90

[tool.black]
line-length = 90
target-version = ["{{ cookiecutter.__ruff_target }}"]
skip-magic-trailing-comma = true

[tool.basedpyright]
reportImplicitStringConcatenation = false
pythonVersion = "{{ cookiecutter.py_req }}"

# packaging
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.__project_slug }}"
authors = [
    { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" }
]
description = "{{ cookiecutter.project_description }}"
readme = { file = "README.md", content-type="text/markdown" }
requires-python = ">={{ cookiecutter.py_req }}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]
#: if cookiecutter.license != "unlicensed"
license = { file = "LICENSE" }
#: endif
#: if cookiecutter.module_type == "bin"
scripts = { "{{ cookiecutter.__project_slug }}" = "{{ cookiecutter.package_name }}.app:app" }
#: endif

#: if cookiecutter.github_username != ""
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.__project_slug }}"
Issues =  "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.__project_slug }}/issues"
#: endif

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "{{ cookiecutter.package_name }}.info.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
